--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF 8" />
-    <meta name="description" content="This is my first website" />
-    <title>My First Website</title>
+    <meta name="description" content="This is my first website"/>
+    <link rel="stylesheet" type="text/css" href="style.css" />
+    <title>My SIte Title</title>
   </head>
   <body></body>
 </html>
