--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF 8" />
     <meta name="description" content="This is my first website"/>
-    <link rel="stylesheet" type="text/css" href="style.css" />
-    <title>My SIte Title</title>
+    <link rel="stylesheet" type="text/css" href="style.css"/>
+    <title>My Site Title</title>
   </head>
   <body></body>
 </html>
