--- a/index.html
+++ b/index.html
@@ -2,9 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="UTF 8" />
-    <meta name="description" content="This is my first website"/>
+    <meta name="description" content="Welcome for all web development"/>
     <link rel="stylesheet" type="text/css" href="style.css"/>
     <title>My Site Title</title>
   </head>
-  <body></body>
+  <body>
+    <h1> Donvine Developers</h1>
+    <h2>Welcome for all web development</h2>
+    <h3> this is my first website</h3>
+  </body>
 </html>
