--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
   <body>
     <h1> Donvine Developers</h1>
     <h2>Welcome for all web development</h2>
-    <h3> this is my first website</h3>
+    <h3> This is my first website</h3>
   </body>
 </html>
